button underline changed

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     <li><a href="">Search</a></li>
                     <li><a href="">Help</a></li>
                     <li><a href="">My Account </a></li>
-                    <li><a href=""><img src="images/letter-o.png" width="17px" height="17px"></a></li>
+                    <img src="images/letter-o.png" width="24" height="24" class="icon-o"></a>
+                    
                 </ul>
 
             </div>
